# semantic-kernel

dotnet/src/SemanticKernel.Memory/ACNRAIMemory/Connectors/: LineageTracker.cs  Neo4jConnector.cs  VectorStoreBridge.cs
dotnet/src/SemanticKernel.Memory/ACNRAIMemory/Core/: BehavioralAnalysis.cs  HumanUnderstanding.cs  ObservableMemory.cs  RAIGraph.cs
dotnet/src/SemanticKernel.Memory/ACNRAIMemory/Examples/: BasicRAIAgent.cs  MultiAgentRAI.cs
dotnet/src/SemanticKernel.Memory/ACNRAIMemory/Protocols/: IMemoryProtocol.cs  IRAIInterfaces.cs
python/semantic_kernel/memory/acn_rai_memory/: pyproject.toml  requirements.txt
python/semantic_kernel/memory/acn_rai_memory/connectors/: lineage_tracker.py  neo4j_connector.py  vector_store_bridge.py
python/semantic_kernel/memory/acn_rai_memory/core/: behavioral_analysis.py  human_understanding.py  observable_memory.py  rai_graph.py
python/semantic_kernel/memory/acn_rai_memory/docs/: README.md  api_reference.md  architecture.md  migration_guide.md
python/semantic_kernel/memory/acn_rai_memory/examples/: basic_rai_agent.py  multi_agent_rai.py
python/semantic_kernel/memory/acn_rai_memory/protocols/: memory_protocol.py  rai_interfaces.py
python/semantic_kernel/memory/acn_rai_memory/tests/: __init__.py  test_connectors.py  test_integration.py  test_observable_memory.py  test_rai_graph.py
