[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "semantic-kernel-acn-rai-memory"
version = "0.1.0"
description = "ACN RAI Memory Module for Semantic Kernel - Advanced memory management with observable behavior tracking"
authors = [
    {name = "ACN RAI Team", email = "rai-team@accenture.com"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.10"

classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers", 
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

dependencies = [
    "semantic-kernel>=1.0.0",
    "pydantic>=2.0.0", 
    "networkx>=3.0",
    "matplotlib>=3.7.0",
    "numpy>=1.24.0",
    "neo4j>=5.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0", 
    "black>=23.0.0",
    "isort>=5.12.0",
    "mypy>=1.5.0",
]

docs = [
    "mkdocs>=1.5.0",
    "mkdocs-material>=9.0.0",
]

connectors = [
    "chromadb>=0.4.0",
    "pinecone-client>=3.0.0", 
    "weaviate-client>=4.0.0",
]

visualization = [
    "plotly>=5.17.0",
    "dash>=2.14.0",
    "pandas>=2.0.0",
]

[project.urls]
Homepage = "https://github.com/Josefsosa/semantic-kernel"
Repository = "https://github.com/Josefsosa/semantic-kernel"
Documentation = "https://github.com/Josefsosa/semantic-kernel/tree/main/python/semantic_kernel/memory/acn_rai_memory/docs"
Issues = "https://github.com/Josefsosa/semantic-kernel/issues"

[tool.setuptools.packages.find]
where = ["python"]
include = ["semantic_kernel*"]

[tool.black]
line-length = 100
target-version = ["py310"]

[tool.isort]
profile = "black"
line_length = 100

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
